fixed error with body being too wide on mobile

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -5,13 +5,13 @@
     flex-flow: column;
     background-image: url('../bkg-images/bck-mobile-960w.webp');
     background-attachment: fixed;
-    background-size: cover;
+    background-size:contain;
     background-color: #30d5c8;
     background-position: center;
     background-repeat: no-repeat;
-    padding-bottom: 2rem;
+   
     @media screen and (min-width:960px){
-        background-image: url('../bkg-images/bck-1920w.webp');
+       
     }
     .hero {
         display: flex;
@@ -57,6 +57,7 @@
         align-items: center;
         flex-flow:column;
         img {
+            height: auto;
         width: 50vw;
         border-radius: 100%;
         @media screen and (min-width:960px){
