--- a/src/styles/imageCarousel.less
+++ b/src/styles/imageCarousel.less
@@ -5,5 +5,6 @@
     }
     img {
          height: auto;
+         width: 90vw;
     }
 }
